<resources>
    <string name="app_name">Monopoly Manager</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="login">Iniciar sesión</string>
    <string name="home">Inicio</string>
    <string name="settings">Preferencias</string>
    <string name="greeting">Hola,</string>
    <string name="wallet">Tu billetera</string>
    <string name="estate">Tus propiedades</string>
    <string name="initial_cash">$1500</string>
    <string name="color">Color del grupo de propiedad:</string>
    <string name="property">Nombre de la propiedad:</string>
    <string name="addEdit">Agregar/Editar propiedad</string>
    <string name="add">Agregar propiedad</string>
    <string name="edit">Editar propiedad</string>
    <string name="houses">Casas:</string>
    <string name="rent">Alquiler:</string>
    <string name="price">Precio:</string>
    <string name="houseAmt">0</string>
    <string name="buy">Comprar</string>
    <string name="general">General</string>
    <string name="hotel">Hotel</string>
    <string name="noHouses">Sin casas</string>
    <string name="oneHouse">1 casa</string>
    <string name="twoHouses">2 casas</string>
    <string name="threeHouses">3 casas</string>
    <string name="fourHouses">4 casas</string>
    <string name="mortgagePrice">Hipoteca:</string>
    <string name="mortgageDetails">Las propiedades hipotecadas no cobran renta. Para deshipotecar se debe devolver la plata obtenida por la hipoteca</string>
    <string name="mortgage">Hipotecar</string>
    <string name="unmortgage">Deshipotecar</string>
    <string name="isMortgaged">(Hipotecada)</string>
    <string name="housesError">Primero se debe comprar la propiedad. Luego podrás agregar casas desde el boton "editar"</string>
    <string name="allPropertiesError">Para agregar o quitar casas se deben tener todas las propiedades de ese grupo.</string>
    <string name="mail">Email</string>
    <string name="changeEmail">Cambiar email</string>
    <string name="change">Cambiar</string>
    <string name="changeImage">Cambiar imagen</string>
    <string name="dog">Perro</string>
    <string name="car">Auto</string>
    <string name="hat">Sombrero</string>
    <string name="shoe">Zapato</string>
    <string name="boat">Barco</string>
    <string name="languages_header">Idioma</string>
    <string name="app_language">Cambiar el idioma de la aplicación</string>
    <string name="createAnAccount">Crea una cuenta</string>
    <string name="favoritePiece">Pieza favorita</string>
    <string name="sell">Vender</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="sellDetails">Si vendes esta propiedad y tienes casas en otras propiedades del mismo grupo, todas ellas se venderan y obtendrás la mitad de lo que las pagaste</string>
    <string name="unmortgageFirst">Esta propiedad esta hipotecada. Pague la hipoteca antes de venderla.</string>
    <string name="titleDeed">Titulo de propiedad</string>
    <string name="title">Titulo</string>
    <string name="housingPrice1">Las casas cuestan $</string>
    <string name="housingPrice2">c/u.\nLos hoteles $</string>
    <string name="housingPrice3">, más 4 casas.</string>
    <string name="hasWholeColor">Cuando un jugador posee los títulos de propiedad de todos los terrenos de un grupo completo de un color, se dobla el alquiler de los terrenos sin edificar.</string>
    <string name="emailUpdated">Email actualizado.</string>
    <string name="emailNotAvailable">Email no disponible. Elija otro.</string>
    <string name="menu">Menu.</string>
    <string name="gameName">Nombre del juego</string>
    <string name="players">Jugadores...</string>
    <string name="youllpay">Pagaras:</string>
    <string name="toPlayer">Al jugador:</string>
    <string name="scanQR">Escanea un QR para pagar a alguien en el mismo juego</string>
    <string name="notValidQR">QR invalido. Vuelva a intentarlo.</string>
    <string name="pay">Pagar</string>
    <string name="findQR">Encuentra un QR válido</string>
    <string name="games">Tus juegos</string>
    <string name="newGame">Juego nuevo</string>
    <string name="createOrJoin">Crear o unirse a un nuevo juego</string>
    <string name="create">Crear</string>
    <string name="delete">Eliminar</string>
    <string name="join">Unirse</string>
    <string name="wrongData">Datos de juego incorrectos</string>
    <string name="nameTaken">Nombre de juego ya en uso</string>
    <string name="removeGame">Abandonar juego</string>
    <string name="removeGameExplanation">Abandonarás el juego y perderás las propiedades en el.</string>

    <!--properties  names-->
    <string name="mediterranean">Avenida Mediterráneo</string>
    <string name="baltic">Avenida Báltico</string>
    <string name="oriental">Avenida Oriental</string>
    <string name="vermont">Avenida Vermont</string>
    <string name="connecticut">Avenida Connecticut</string>
    <string name="stCharles">Plaza San Carlos</string>
    <string name="states">Avenida de los Estados</string>
    <string name="virginia">Avenida Virginia</string>
    <string name="stJames">Plaza San James</string>
    <string name="tennessee">Avenida Tennessee</string>
    <string name="newYork">Avenida Nueva York</string>
    <string name="kentucky">Avenida Kentucky</string>
    <string name="indiana">Avenida Indiana</string>
    <string name="illinois">Avenida Illinois</string>
    <string name="atlantic">Avenida Atlántico</string>
    <string name="ventnor">Avenida Ventnor</string>
    <string name="marvin">Jardines de Marvin</string>
    <string name="pacific">Avenida Pacífico</string>
    <string name="northCarolina">Avenida Carolina del norte</string>
    <string name="pennsylvania">Avenida Pennsylvania</string>
    <string name="parkPlace">Plaza del Parque</string>
    <string name="boardWalk">Paseo Tablado</string>

    <!--colors-->
    <string name="lime">Lima</string>
    <string name="red">Rojo</string>
    <string name="blue">Azul</string>
    <string name="orange">Naranja</string>
    <string name="lightblue">Celeste</string>
    <string name="yellow">Amarillo</string>
    <string name="green">Verde</string>
    <string name="purple">Violeta</string>


    <string name="wrongUser">Usuario o contraseña incorrecto</string>
    <string name="selectFirst">Selecciona una propiedad primero</string>
    <string name="notEnoughCash">No tienes suficiente dinero</string>

    <!-- Preference Titles -->
    <string name="loading">Cargando</string>
    <string name="sync_header">Sync</string>
    <string name="session">Sesión</string>
    <string name="stayLoggedIn">Mantener iniciada la sesión</string>
    <string name="logOut">Cerrar sesión</string>
    <string name="necessaryFields">Todos los campos son necesarios</string>
    <string name="passwordsDontMatch">Las contraseñas no coinciden</string>
    <string name="passwordLength">La contraseña debe tener al menos 6 caracteres</string>
    <string name="userOrEmailNotAvailable">Usuario o email no disponibles</string>


    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pwdRepeat">Repita su contraseña</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>