<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/languages_header">

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/languages"
            app:entryValues="@array/languages_values"
            app:key="language"
            app:title="@string/app_language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/session">

        <SwitchPreferenceCompat
            android:id="@+id/stayLoggedIn"
            android:defaultValue="false"
            app:key="stayLoggedIn"
            app:title="@string/stayLoggedIn" />

    </PreferenceCategory>

</PreferenceScreen>