<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GeneralDetail">

    <Button
        android:id="@+id/editBtn"
        android:layout_width="127dp"
        android:layout_height="55dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toEndOf="@+id/price"
        app:layout_constraintTop_toBottomOf="@+id/propertyName"
        app:layout_constraintVertical_bias="0.588" />

    <TextView
        android:id="@+id/propertyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/property"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/currentRent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/rent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/housesAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/houses"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/currentRent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/propertyName"
        app:layout_constraintVertical_bias="0.948" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/price"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="412dp"
        android:layout_height="295dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/propertyName"
        app:layout_constraintVertical_bias="0.707">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green_moss">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/houses"
                android:textColor="#1B5E20" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/rent"
                android:textColor="#1B5E20" />

        </TableRow>

        <TableRow
            android:id="@+id/noHouseRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/noHouses" />

            <TextView
                android:id="@+id/noHousesRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp" />
        </TableRow>

        <TableRow
            android:id="@+id/House1Row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/oneHouse" />

            <TextView
                android:id="@+id/oneHouseRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp" />
        </TableRow>

        <TableRow
            android:id="@+id/House2Row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/twoHouses" />

            <TextView
                android:id="@+id/twoHouseRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp" />
        </TableRow>

        <TableRow
            android:id="@+id/House3Row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/threeHouses" />

            <TextView
                android:id="@+id/threeHouseRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp" />
        </TableRow>

        <TableRow
            android:id="@+id/House4Row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/fourHouses" />

            <TextView
                android:id="@+id/fourHouseRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp" />
        </TableRow>

        <TableRow
            android:id="@+id/hotelRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/hotel" />

            <TextView
                android:id="@+id/hotelRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>